# RegeltestCreator

./: .gitignore  DEVELOPMENT.md  README.md  RegeltestCreator.pyw  RegeltestCreator.spec  alembic.ini  build_executable.bat  build_executable_macos.sh  main.py  pyproject.toml  requirements.txt  updater.ps1  updater.sh
alembic/: env.py
res/: MainWindow.ui  dataset_download_dialog.ui  download_progress.ui  downloader.ui  filter_editor.ui  first_setup_widget.ui  mainwindow.ui  question_editor.ui  question_group_editor.ui  question_overview_widget.ui  regeltest_archive.ui  regeltest_creator_dockwidget.ui  regeltest_creator_questionwidget.ui  regeltest_save.ui  regeltest_setup.ui  regeltest_setup_widget.ui  rulegroup_editor.ui  self_test_dockwidget.ui  self_test_widget.ui  update_checker.ui
src/: Datatypes.py  MainWidgets.py  __version__.py  basic_config.py  controller.py  custom_ui.py  database.py  dataset_downloader.py  datatypes.py  db_abstraction.py  dock_widgets.py  document_builder.py  filter_editor.py  main_application.py  main_widgets.py  question_editor.py  question_table.py  question_tree.py  regeltest_management.py  regeltestcreator.py  ui_dataset_download_dialog.py  ui_download_progress.py  ui_downloader.py  ui_filter_editor.py  ui_first_setup_widget.py  ui_mainwindow.py  ui_question_editor.py  ui_question_group_editor.py  ui_question_overview_widget.py  ui_regeltest_archive.py  ui_regeltest_creator_dockwidget.py  ui_regeltest_creator_questionwidget.py  ui_regeltest_save.py  ui_regeltest_setup.py  ui_regeltest_setup_widget.py  ui_rulegroup_editor.py  updater.py  (+3 more)
(+8 files in other folders)
