[project]
name = "regeltestcreator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp~=3.11.18",
    "alembic==1.15.2",
    "appdirs~=1.4.4",
    "beautifulsoup4==4.13.4",
    "jinja2==3.1.6",
    "lxml==5.4.0",
    "markdown2==2.5.3",
    "packaging==25.0",
    "pillow==11.2.1",
    "psutil~=7.0.0",
    "pyside6-essentials==6.9.0",
    "python-pptx==1.0.2",
    "reportlab==4.4.1",
    "requests==2.32.3",
    "sqlalchemy==2.0.41",
    "traitlets==5.14.3",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.13.0",
]
